added body parser

--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -15,10 +15,18 @@
     <% include partials/_header %>
 
     <h3>Create TinyURL</h3>
+
+    <%# form tag has two attributes: action (tells form which URL to submit) 
+    and method (tell form which HTTP method to use when submitting the form) %>
     <form class="form-inline" action="/urls" method="POST">
       <div class="form-group mb-2">
         <label for="longURL">Enter a URL:</label>
-        <input class="form-control" type="text" name="longURL" placeholder="http://" style="width: 300px; margin: 1em">
+        
+        <%# name identifies the data ... adds the key longURL to the data 
+        we'll be sending in the body of our POST request. %>
+        
+        <input class="form-control" type="text" name="longURL" 
+        placeholder="http://" style="width: 300px; margin: 1em">
         <button type="submit" class="btn btn-primary">Submit</button>
       </div>
     </form>
