--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -20,11 +20,11 @@
     and method (tell form which HTTP method to use when submitting the form) %>
     <form class="form-inline" action="/urls" method="POST">
       <div class="form-group mb-2">
-        <label for="longURL">Enter a URL:</label>
+        <label class="p-3 mb-2 bg-dark text-white" for="longURL">Generate a short URL :</label>
         
         <%# name identifies the data ... adds the key longURL to the data 
         we'll be sending in the body of our POST request. %>
-        
+
         <input class="form-control" type="text" name="longURL" 
         placeholder="http://" style="width: 300px; margin: 1em">
         <button type="submit" class="btn btn-primary">Submit</button>
