trying to delete and update items

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -3,7 +3,6 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel='stylesheet' href='/stylesheets/style.css' />
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
@@ -17,8 +16,13 @@
     <h2> A list of the Urls </h2>
     <ul>
       <% for(var shortURL in urls){ %> 
-        <div> <%= shortURL %> <span> : </span> <%= urls[shortURL] %></div>
+        <div> <%= shortURL %> <span> : </span> <%= urls[shortURL] %>  
+          <form method="POST" action="/urls/delete">
+        </div>
+        
       <% }%>
+
   </ul>
+  </form>
 </body>
 </html>
