--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -14,6 +14,7 @@
   <body style="font-size:20px; padding:50px;">
 
     <% include partials/_header %>
+    <% include partials/_nav %>
 
     <h3>Create TinyURL</h3>
 
