--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -9,6 +9,8 @@
   <title>TinyApp</title>
 </head>
 <body style="font-size:20px; padding:50px;">
+    <% include partials/_header %>
+    <% include partials/_nav %>
   <h1> Tiny App - URL Shortener</h1> <br>
     <!-- Add EJS code here
     urls: urlDatabase -->
