set cookie, need to render pages to reflect login and logout

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,1 +1,7 @@
-<h1 class="p-3 mb-2 bg-success text-white"> Tiny APP </h1>
+<h1 class="p-3 mb-2 bg-success text-white"> Tiny App    URL Shortener </h1>
+
+<form method="post" action="/login"> 
+    <label for="user"> Username : </label>
+    <input name="user" type="text" placeholder="Enter a username"> 
+    <button type="submit" class="btn btn-primary">Login</button>
+</form>
