--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,7 +1,15 @@
 <h1 class="p-3 mb-2 bg-success text-white"> Tiny App    URL Shortener </h1>
 
+<% if (!username) {%>
 <form method="post" action="/login"> 
     <label for="user"> Username : </label>
     <input name="user" type="text" placeholder="Enter a username"> 
     <button type="submit" class="btn btn-primary">Login</button>
 </form>
+<% } 
+
+else { %>
+<label for="user"> Username : </label> 
+<label> <%= user %>
+<button type="submit" class="btn btn-primary">Logout</button>
+<% } %> 
