--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -1,4 +1,8 @@
-<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
-    <p> <a href="http://localhost:8080/urls/new">Add New </a></p>
-    <p> <a href="http://localhost:8080/urls/"> URL Collection </a> </p>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <ul class="nav navbar-nav">
+            <li> <a href="http://localhost:8080/urls/new">Add New </a></li>
+            <li> <a href="http://localhost:8080/urls/"> URL Collection </a> </li>
+        </ul>
+    </div>
 </nav>
