adding login router

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -2,5 +2,5 @@
 
 <form action="/login" method="POST">
     Username: <input name="username" type="text"> 
-    <button name="sign-in" type="submit"> Sign in </button>
+    <button type="submit"> Sign in </button>
 </form>
