add required keyword for form validation

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,6 +1,6 @@
 <h1 class="p-3 mb-2 bg-success text-white"> Tiny App  -  URL Shortener </h1>
 
 <form action="/login" method="POST">
-    Username: <input name="username" type="text"> 
+    Username: <input name="username" type="text" required> 
     <button type="submit"> Sign in </button>
 </form>
