--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -28,7 +28,7 @@
         we'll be sending in the body of our POST request. %>
 
         <input class="form-control" type="text" name="longURL" 
-        placeholder="http://" style="width: 300px; margin: 1em">
+        placeholder="http://"  style="width: 300px; margin: 1em" required>
         <button type="submit" class="btn btn-primary">Submit</button>
       </div>
     </form>
