--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -14,7 +14,7 @@
     <!-- Add EJS code here
     urls: urlDatabase -->
     
-    <h2> A list of the Urls </h2>
+    <h2> Your Personal URL Collection </h2>
       <table class="table table-hover">
         <thead> 
           <tr>
