--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -29,8 +29,8 @@
             <td> <%= shortURL %> </td> 
             <td> <%= urls[shortURL] %> </td> 
             <form method="POST" action="/urls/<%= shortURL %>/delete">
-            <td> <button>  <a href="/urls/<%= shortURL %>"> Edit </a> </button> </td>
-            <td> <button type="delete" class="btn btn-danger">Delete </button> </td>
+            <td> <button class="btn btn-outline-primary">  <a href="/urls/<%= shortURL %>"> Edit </a> </button> </td>
+            <td> <button type="delete" class="btn btn-danger"> Delete </button> </td>
           </form>
           </tr>
         <% }%>
