two hours of debugging to display email

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,6 +9,9 @@
     <title>TinyApp</title>
   </head>
   <body style="font-size:20px; padding:50px;">
+  <h1 class="p-3 mb-2 bg-success text-white"> Tiny App  -  URL Shortener </h1>
+  <p> <a href="/login">Login </a>  |  <a href="/login"> Register </a>  </p>
+
     <form action="/register" method="POST">
         <label for="email" > Email: </label>
         <input type="email" name="email"> <br>
