--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,15 +1,10 @@
 <h1 class="p-3 mb-2 bg-success text-white"> Tiny App  -  URL Shortener </h1>
 
-<% if (!locals.user_id) {%>
-<form action="/login" method="POST">
-    Username: <input name="user_id" type="text" required> 
-    <button type="submit"> Sign in </button>
-</form>
+<% if (typeof user !== 'undefined') { %>
 
-<% } else {
-    console.log(locals.user_id); %>
+
 <form action="/logout" method="POST">
-You are logged in as: <%= locals.user_id.email %>
+You are logged in as: <%= user.email %>
 <button type="submit"> Logout </button>
 </form>
 
