--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -13,8 +13,8 @@
 
   <body style="font-size:20px; padding:50px;">
 
-    <% include partials/_header %>
-    <% include partials/_nav %>
+    <% include ./partials/_header %>
+    <% include ./partials/_nav %>
 
     <h3>Create TinyURL</h3>
 
