--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -9,8 +9,8 @@
   <title>TinyApp</title>
 </head>
 <body style="font-size:20px; padding:50px;">
-    <% include partials/_header %>
-    <% include partials/_nav %>
+    <% include ./partials/_header %>
+    <% include ./partials/_nav %>
     <!-- Add EJS code here
     urls: urlDatabase -->
     
