--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -11,8 +11,7 @@
 <body style="font-size:20px; padding:50px;">
   <% include ./partials/_header %>
   <% include ./partials/_nav %>
-    <!-- Add EJS code here
-    urls: urlDatabase -->
+    <!-- Add EJS code here -->
     
     <h2> Your Personal URL Collection </h2>
       <table class="table table-hover">
