user registration and log in function working

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,7 +11,8 @@
   </head>
   <body style="font-size:20px; padding:50px;">
   <h1 class="p-3 mb-2 bg-success text-white"> Tiny App  -  URL Shortener </h1>
-  
+  <p> <a href="/login">Login </a>  |  <a href="/register"> Register </a>  </p>
+
     <form action="/login" method="POST">
         <label for="email" > Email: </label>
         <input type="email" name="email"> <br>
