--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,7 +10,9 @@
   </head>
   <body style="font-size:20px; padding:50px;">
   <h1 class="p-3 mb-2 bg-success text-white"> Tiny App  -  URL Shortener </h1>
+  <p> <a href="/login">Login </a>  |  <a href="/register"> Register </a>  </p>
   
+    <h3> Create an account </h3>
     <form action="/register" method="POST">
         <label for="email" > Email: </label>
         <input type="email" name="email"> <br>
