--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,6 +13,7 @@
   <h1 class="p-3 mb-2 bg-success text-white"> Tiny App  -  URL Shortener </h1>
   <p> <a href="/login">Login </a>  |  <a href="/register"> Register </a>  </p>
 
+  <h2> Login </h2>
     <form action="/login" method="POST">
         <label for="email" > Email: </label>
         <input type="email" name="email"> <br>
