testing shorturl routes

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -26,7 +26,7 @@
         <% for(var shortURL in urls){ %>
           <tr>
             <td> <%= shortURL %> </td> 
-            <td> <%= urls[shortURL] %> </td> 
+            <td> <%= urls[shortURL].longURL %> </td> 
             <form method="POST" action="/urls/<%= shortURL %>/delete">
             <td> <button class="btn btn-outline-primary">  
               <a href="/urls/<%= shortURL %>"> Edit </a> </button> </td>
