replaced with session middleware for encrypting cookies

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset='utf-8'>
+    <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no'>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css' integrity='sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS' crossorigin='anonymous'>
     <title>TinyApp</title>
   </head>
-  <body style="font-size:20px; padding:50px;">
-  <h1 class="p-3 mb-2 bg-success text-white"> Tiny App  -  URL Shortener </h1>
-  <p> <a href="/login">Login </a>  |  <a href="/register"> Register </a>  </p>
+  <body style='font-size:20px; padding:50px;'>
+  <h1 class='p-3 mb-2 bg-success text-white'> Tiny App  -  URL Shortener </h1>
+  <p> <a href='/login'>Login </a>  |  <a href='/register'> Register </a>  </p>
   
     <h3> Create an account </h3>
-    <form action="/register" method="POST">
-        <label for="email" > Email: </label>
-        <input type="email" name="email"> <br>
-        <label for="password"> Password: </label>
-        <input type="password" name="password">
-        <button type="submit"> Submit </button>
+    <form action='/register' method='POST'>
+        <label for='email' > Email: </label>
+        <input type='email' name='email'> <br>
+        <label for='password'> Password: </label>
+        <input type='password' name='password'>
+        <button type='submit'> Submit </button>
     </form>
   </body>
 </html>
