--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,12 +1,12 @@
-<h1 class="p-3 mb-2 bg-success text-white"> Tiny App  -  URL Shortener </h1>
+<h1 class='p-3 mb-2 bg-success text-white'> Tiny App  -  URL Shortener </h1>
 
 <% if (user === undefined) { %>
-<p> <a href="/login">Login </a>  |  <a href="/register"> Register </a>  </p>
+<p> <a href='/login'>Login </a>  |  <a href='/register'> Register </a>  </p>
  
 <% } else { %>
-<form action="/logout" method="POST">
+<form action='/logout' method='POST'>
 You are logged in as: <%= user.email %>
-<button type="submit"> Logout </button>
+<button type='submit'> Logout </button>
 </form>
 
 <% } %>
