--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta charset='utf-8'>
+  <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no'>
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" 
-  integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+  <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css' 
+  integrity='sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS' crossorigin='anonymous'>
   <title>TinyApp</title>
 </head>
 
-<body style="font-size:20px; padding:50px;">
+<body style='font-size:20px; padding:50px;'>
     <% include ./partials/_header %>
     <% include ./partials/_nav %>
     <!-- Add EJS code here
     urls: urlDatabase -->
     
     <h4> ShortURL: <%= shortURL %> </h4> 
-    <form method="post" action = "/urls/<%=shortURL%>" >
-        <input class="form-control" type="text" name="longURL" 
-        placeholder="<%=longURL%>/" style="width: 500px; margin: 1em" required>  
+    <form method='post' action = '/urls/<%=shortURL%>' >
+        <input class='form-control' type='text' name='longURL' 
+        placeholder='<%=longURL%>/' style='width: 500px; margin: 1em' required>  
 
-        <button type="submit" class="btn btn-primary">Update</button>
+        <button type='submit' class='btn btn-primary'>Update</button>
     </form>
     
   </ul>
